# dataload-nba-mariadb

./: README.md  _depend.py  pyproject.toml
src/nbaload-mariadb/: batch.py  clean.py  fetch.py  logs.py  main.py  run.py
src/nbaload_mariadb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
